[tool.poetry]
name = "library-tests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
panda = "^0.3.1"
numpy = "^1.20.2"
matplotlib = "^3.4.1"
sklearn = "^0.0"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
